--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /* Basic Style */
 body {
     font-family: Lato, sans-serif;
-    color: #333;
-    background-color: #f8f8f8;
+    color: rgb(51, 51, 51);
+    background-color: rgb(247, 247, 247);
 }
 
 .image-block {
@@ -47,8 +47,7 @@ ul {
     padding: 0px;
 }
 
-li,
-h3 {
+li {
     list-style: none;
 }
 
@@ -58,46 +57,56 @@ button {
 }
 
 button {
-    background: none;
-    border: 0px;
-    color: #888;
-    font-size: 15px;
     width: 60px;
     font-family: Lato, sans-serif;
+    font-size: 15px;
+    color: rgb(136, 136, 136);
+    border: 0px;
     cursor: pointer;
+    background: none;
 }
 
 button:hover {
     color: #3a3A3a;
 }
 
+.todo-app__added {
+    padding-top: 30px;
+}
+
+.todo-app__checked {
+    padding-top: 30px;
+}
+
+.todo-app__done {
+    padding-top: 30px;
+}
+
 /* Heading */
-h3,
-label[for='new-task'] {
+h3 {
+    font-size: 15px;
     color: #333;
     font-weight: 700;
-    font-size: 15px;
-    border-bottom: 2px solid #333;
-    padding: 30px 0 10px;
+    border-bottom: 2px solid rgb(51, 51, 51);
     margin: 0;
     text-transform: uppercase;
 }
 
-input[type="text"] {
-    margin: 0;
-    font-size: 18px;
-    line-height: 18px;
+input {
     height: 21px;
     padding: 0 9px;
-    border: 1px solid #dDd;
-    background: #FFF;
-    border-radius: 6px;
     font-family: Lato, sans-serif;
-    color: #888;
+    font-size: 18px;
+    line-height: 18px;
+    color: rgb(136, 136, 136);
+    margin: 0;
+    border: 1px solid rgb(221, 221, 221);
+    background: rgb(255, 255, 255);
+    border-radius: 6px;
 }
 
-input[type="text"]:focus {
-    color: #333;
+input:focus {
+    color: rgb(51, 51, 51);
 }
 
 /* New Task */
@@ -105,23 +114,13 @@ input[type="text"]:focus {
     margin-bottom: 20px;
 }
 
-input#new-task {
-    width: 318px;
-}
-
 /* Task list */
 li {
-    overflow: hidden;
-    padding: 20px 0;
-    border-bottom: 1px solid #eee;
-
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-li>* {
-    vertical-align: middle;
+    padding: 20px 0;
+    border-bottom: 1px solid rgb(238, 238, 238);
 }
 
 li>input[type="checkbox"] {
@@ -129,35 +128,31 @@ li>input[type="checkbox"] {
 }
 
 li>label {
-    padding-left: 10px;
-    box-sizing: border-box;
     font-size: 18px;
-    width: 226px;
+    padding-left: 10px;
 }
 
-li>input[type="text"] {
-    width: 226px
-}
-
-button.delete img {
+.delete img {
+    width: 2em;
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.delete img:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
 ul#completed-tasks label {
     text-decoration: line-through;
-    color: #888;
+    color: rgb(136, 136, 136);
 }
 
 /* Edit Task */
 ul li input[type=text] {
-    display: none
+    display: none;
+    width: 224px;
 }
 
 ul li.editMode input[type=text] {
